--- a/customer-template/index.html
+++ b/customer-template/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
